--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,8 @@ dependencies {
     implementation "androidx.room:room-rxjava2:$room_version"
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
 
+    implementation 'org.koin:koin-android:2.0.0-rc-2'
+
     kapt "androidx.room:room-compiler:$room_version"
 
     testImplementation 'junit:junit:4.12'
