--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,9 @@ dependencies {
     implementation "io.reactivex.rxjava2:rxjava:2.2.8"
     implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
     implementation 'org.koin:koin-android:2.0.0-rc-2'
+    implementation 'com.jakewharton.timber:timber:4.7.1'
+
+    implementation 'com.facebook.stetho:stetho:1.5.1'
 
     kapt "androidx.room:room-compiler:$room_version"
 
